- check if --add-opens has been supplied on Linux